i686-w64-mingw32-objdump -WL returns incorrect file paths

PR 29523
	* dwarf.c (display_debug_lines_decoded): Correctly handle DWARF-5
	directory and filename tables.